app/assets/stylesheets/zammad.css.scss
/* ... */
  .article-meta {
    background: #2c2d36;
    color: white;
    padding: 21px 25px 11px;
    margin: 0 12px;
  }

    .article-meta.bottom {
      padding-top: 17px;
      padding-bottom: 8px;
    }

    .article-meta-row {
      margin-bottom: 5px;
    }

    .article-meta-key {
      width: 13%;
      text-transform: uppercase;
    }

    .article-meta-value {
      margin-left: 8px;
    }

    .article-meta .icon {
      vertical-align: top;
      margin: 1px 3px 0 0;
    }

    .article-meta .text-muted {
      color: #96969b;
    }

  .internal-border {
    padding: 5px;
    border-radius: 8px;
    margin: -5px;
  }

  .is-internal .internal-border {
    background: repeating-linear-gradient(45deg, hsl(18,79%,89%), hsl(18,79%,89%) 5px, hsl(210,17%,98%) 5px, hsl(210,17%,98%) 6px);
    background-size: 8px 8px;
  }

  .is-internal .bubble-arrow {
    display: none;
  }

  .text-bubble {
    padding: 10px 20px;
    white-space: pre-wrap;
    background: white;
    border-radius: 2px;
    border: 1px solid hsl(240,4%,95%);
    box-shadow: 0 0 1px rgba(0,0,0,.06) inset;
    position: relative;
  }

    .ticket-article-item.state--folde-out .text-bubble {
      border-color: hsl(0,0%,90%);
    }

  .customer.ticket-article-item .text-bubble {
    background: #e5f0f5;
    border-color: hsl(199,38%,92%);
    box-shadow: none;
  }

    .customer.ticket-article-item.state--folde-out .text-bubble {
      border-color: hsl(199,44%,85%);
    }

    .bubble-arrow {
      position: absolute;
      width: 7px;
      height: 9px;
      left: -6px;
      top: 15px;
      overflow: hidden;
    }

    .bubble-arrow:after {
      content: "";
      position: absolute;
      top: -1px;
      left: 2px;
      width: 11px;
      height: 11px;
      background: white;
      border: 1px solid hsl(240,4%,95%);
      box-shadow: 0 0 1px rgba(0,0,0,.06) inset;
      -webkit-transform: rotate(-45deg);
              transform: rotate(-45deg);
    }

    .article-add.is-internal .bubble-arrow:after {
      background: #f2def2;
      border: #eed3d7;
    }

    .customer.ticket-article-item .bubble-arrow {
      left: auto;
      right: -6px;
    }

    .customer.ticket-article-item .bubble-arrow:after {
      background: #e5f0f5;
      left: auto;
      right: 2px;
      border-color: hsl(199,38%,92%);
      box-shadow: none;
    }

  .ticket-article-item .attachments:not(:empty) {
    border-top: 1px solid hsl(0,0%,93%);
    white-space: normal;
    margin: 0 -20px;
    padding: 26px 20px 7px 72px;
    position: relative;
  }

    .ticket-article-item .attachments h3 {
      color: hsl(60,1%,34%);
      letter-spacing: 0;
      font-weight: bold;
      padding: 0 7px;
      margin: 0 0 4px;
    }

    .attachments .paperclip {
      position: absolute;
      left: 33px;
      top: 27px;
    }

  .ticket-article-item .task-subline {
    margin-top: 12px;
  }

  .article-action {
    padding: 5px;
    margin: 5px 12px;
    color: black;
    font-size: 12px;
    text-align: center;
    opacity: 0.5;
    @extend .u-clickable;
  }

    .article-action:hover {
      color: black;
      text-decoration: none;
      opacity: 1;
    }

    .article-action .icon {
      margin-right: 10px;
      vertical-align: top;
    }

.ticket-edit {
  margin-top: auto;
  margin-bottom: 36px;
}

  .bottom-form {
    background: white;
  }

  .ticket-edit .avatar {
    margin-bottom: 3px;
  }

  .dropArea {
    background: white;
    border: 5px solid;
    color: hsl(202,66%,55%);
    font-size: 20px;
    margin: 5px;
    display: none;
  }

  .is-dropTarget .dropArea {
    display: block;
  }

.edit-controls {
  position: relative;
}

  .edit-control-item {
    width: 38px;
    height: 36px;
    position: absolute;
    top: 38px;
    display: none;
  }

  .edit-control-item:nth-child(3) {
    top: 74px;
  }

  .edit-control-item:nth-child(4) {
    top: 110px;
  }

  .edit-control-item:not(:last-child) {
    border-bottom: 1px solid #e6e6e6;
  }

  .pop-selectable .icon {
    opacity: 0.3;
  }

  .pop-selectable:hover .icon {
    opacity: 1;
  }

  .visibility-toggle > * {
    height: 36px;
    width: 38px;
    position: absolute;
  }

  .visibility-toggle .icon {
    display: block;
  }

  .visibility-toggle .icon,
  .recipient-picker {
    opacity: 0.2;
  }

  .article-add.is-public .internal-visibility {
    visibility: hidden;
  }

  .article-add.is-internal .visibility-toggle .icon {
    opacity: 1;
  }

  .article-add.is-internal .public-visibility {
    visibility: hidden;
  }

  .ticket-edit .recipient-picker {
    height: 36px;
    position: relative;
    transition: 300ms;
  }

  .ticket-edit .recipient-picker.is-open {
    opacity: 1;
  }

    .recipient-picker .icon {
      margin-top: -2px;
    }

    .recipient-count {
      margin-left: 3px;
      margin-top: 1px;
      line-height: 1;
    }

    .recipient-list {
      position: absolute;
      background: hsl(234,10%,19%);
      left: 48px;
      color: white;
    }

      .recipient-picker.is-open .recipient-list {
        display: block;
      }

    .list-arrow {
      position: absolute;
      top: 210px;
      left: -6px;
      margin-top: -6px;
      border-right: 6px solid #2c2d36;
      border-top: 6px solid transparent;
      border-bottom: 6px solid transparent;
    }

    .list-head {
      height: 38px;
      line-height: 38px;
      padding: 1px 19px 0;
      text-transform: uppercase;
    }

      .list-head div {
        position: relative;
        left: -20px;
      }

    .list-entry {
      width: 340px;
      height: 60px;
      padding: 0 16px;
      border-top: 1px solid hsl(240,6%,27%);
    }

    .list-entry-name {
      margin-left: 18px;
    }

    .list-entry-type {
      font-size: 12px;
    }

    .list-entry-type div {
      padding: 3px 7px;
      border: 1px solid hsl(234,10%,10%);
      color: hsl(0,0%,40%);
      background: hsl(234,10%,14%);
    }
/* ... */

